--- a/MyApp1/.gitignore
+++ b/MyApp1/.gitignore
@@ -1,1 +1,5 @@
 /AccountingApp.class
+/AccountingAppIF.class
+/AccountingAppIFunder10000.class
+/AccountingAppARRAY.class
+/AccountingAppARRAYLOOP.class
