--- a/MyApp1/.gitignore
+++ b/MyApp1/.gitignore
@@ -3,3 +3,8 @@
 /AccountingAppIFunder10000.class
 /AccountingAppARRAY.class
 /AccountingAppARRAYLOOP.class
+/MethodApp.class
+/Accounting.class
+/AccountingClassApp.class
+/AccountingInstanceApp.class
+/accountingins.class
